--- a/src/app/skills/skills.tpl.html
+++ b/src/app/skills/skills.tpl.html
@@ -1,8 +1,16 @@
-<div ng-repeat="(category,categoryContent) in ::list">
-	<h1>{{category}}</h1>
-	
-	<div ng-repeat="item in categoryContent">
-		<p>{{item.name}}</p>
-		<p>{{item.proficiency}}</p>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1">
+			<div ng-repeat="(category,categoryContent) in ::list">
+		<h1>{{category}}</h1>
+		
+		<div ng-repeat="item in categoryContent">
+			<p>{{item.name}}</p>
+			<div class="row">
+				<div class="col-sm-4"><progressbar value="item.proficiency"></progressbar></div>
+			</div>
+		</div>
+	</div>
+		</div>
 	</div>
 </div>
