--- a/src/app/work/work.tpl.html
+++ b/src/app/work/work.tpl.html
@@ -1,3 +1,6 @@
+<div class="section-header">
+	
+</div>
 <timeline>
 		<timeline-event ng-repeat="item in ::list">
 	    <timeline-badge class="info" when-visible="animateElementIn" when-not-visible="animateElementOut">
