--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,4 +3,5 @@
 @import '../../vendor/angular-timeline/dist/angular-timeline.css';
 @import '../../vendor/angular-timeline/dist/angular-timeline-bootstrap.css';
 @import '../../vendor/angular-timeline/dist/angular-timeline-animations.css';
-@import 'style.scss'
+@import '_style.scss';
+@import '_animations.scss';
