--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -4,18 +4,14 @@ html, body{
 body{
 	margin-top:-50px;
 	overflow-x:hidden;
+	overflow-y:scroll;
 	font-family:"Open Sans","Helvetica Neue",Arial,sans-serif;
 	background: url('img/concrete_seamless.png');
 	background-repeat: repeat;
+	color:#535353;
+
 }
-@media (min-width: 768px){
-    .navbar-nav{
-        float:none;
-        margin: 0 auto;
-        display: table;
-        table-layout: fixed;
-    }
-}
+
 ul.timeline{
 	ul{
 		list-style-type: disc;
@@ -45,8 +41,8 @@ ul.timeline{
 .section-header{
 	width: 100%;
 	text-align: center;
-	padding: 10px 0 10px 0;
-	font-size: 20px;
+	padding: 20px 0 20px 0;
+	font-size: 30px;
 }
 
 .custom_container{
@@ -61,16 +57,21 @@ ul.timeline{
 	width: 100%;
 	position: relative;
 	.project-card-overlay{
-		display: none;
+		opacity: 0;
 		position: absolute;
 		top:0;
 		bottom:0;
 		background: black;
-		opacity: 0.8;
+		cursor: pointer;
 		width: 100%;
 		left: 0;
 		color: white;
 		font-size: 40px;
+		transition: all 0.5s ease-in-out;
+		-webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+		-moz-transition: all 0.5s ease-in-out; /** Firefox **/
+		-o-transition: all 0.5s ease-in-out; /** Opera **/
+		-ms-transition: all 0.5s ease-in-out;
 
 		&:before{
 			 content: '';
@@ -81,7 +82,7 @@ ul.timeline{
 		}
 	}
 	&:hover .project-card-overlay{
-		display: block;
+		opacity: 0.8;
 	}
 	.project-image{
 		width: 100%;
@@ -91,28 +92,38 @@ ul.timeline{
 	}
 }
 
-.slide {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-.slide.ng-enter,
-.slide.ng-leave {
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
-}
-.slide.ng-enter {
-    left: 100%;
-}
-.slide.ng-enter-active {
-    left: 0;
-}
-.slide.ng-leave {
-    left: 0;
-}
-.slide.ng-leave-active {
-    left: -100%;
+
+.selected-project{
+	.back{
+		font-size: 20px;
+		cursor: pointer;
+	}
+	.tools-section{
+		margin-top: 250px;
+		padding-left: 20px;
+		color:gray;
+		font-style: italic;
+	}
+	.project-image{
+		width: 100%;
+	}
 }
 
+
+@media (min-width: 768px){
+    .navbar-nav{
+        float:none;
+        margin: 0 auto;
+        display: table;
+        table-layout: fixed;
+    }
+}
+
+@media (max-width: 768px){
+    .selected-project{
+		
+		.tools-section{
+			margin-top: 10px;
+		}
+	}
+}
