Added Contact From with a Node Sever. Added Changes in Design

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,4 +1,23 @@
-Hi! I'm Marc Hayek
-I'm a software engineer living in Beirut, Lebanon.
-
-<a href ui-sref="about">Learn More About Me</a>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1">
+			<div class="home">
+				<div class="header">
+					Hi! Im Marc Hayek
+				</div>
+				<div class="sub-header">
+					I'm a software engineer living in Beirut, Lebanon.
+				</div>
+				<div class="learn-more">
+					<a href ui-sref="about">Learn More About Me <i class="fa fa-chevron-right"></i></a>
+				</div>
+				<ul class="social">
+				<li><a href="mailto:marchayek90@gmail.com"><i class="fa fa-envelope"></i></a></li>
+				<li><a href="https://www.facebook.com/marc.hayek.988" target="_blank"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="http://lb.linkedin.com/pub/marc-hayek/61/1b/b5" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/marc-hayek" target="_blank"><i class="fa fa-github"></i></a></li>
+			</ul>
+			</div>
+		</div>
+	</div>
+</div>
