--- a/src/app/education/education.tpl.html
+++ b/src/app/education/education.tpl.html
@@ -1,6 +1,18 @@
-<div ng-repeat="item in ::list ">
-	<h1>{{item.name}}</h1>
-	<h2>{{item.degree}}-{{item.date}}</h2>
-	<h3 ng-show="item.total_gpa > 0">{{item.total_gpa}}-{{item.major_gpa}}</h3>
-	<p ng-show="item.honors.length > 0 ">{{item.honors}}</p>
+<div class="container">
+	<div class="row">
+		<div class="section-header">
+			Education
+		</div>
+		<div class="col-sm-10 col-sm-offset-1 education">
+			<div class="school" ng-repeat="item in ::list ">
+				<img class="logo" ng-src="{{item.logoURL}}">
+				<h2 class="name">{{item.name}}</h2>
+				<div class="date">{{item.date}}</div>
+				<h4 class="degree">{{item.degree}}</h4>
+				<div class="gpa" ng-show="item.total_gpa > 0">GPA:{{item.total_gpa}} Major GPA:{{item.major_gpa}}</div>
+				<div class="honors" ng-show="item.honors.length > 0 ">{{item.honors}}</div>
+				<div class="courses" ng-show="item.courses.length > 0 "><h4>Relevant Courswork:</h4>{{item.courses}}</div>
+			</div>
+		</div>
+	</div>
 </div>
