Design Fixes. Placed Contact info in service

--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -7,10 +7,10 @@
 		<div class="col-sm-10 col-sm-offset-1">
 			<div class="about-text">
 				My name is Marc Hayek. I hold a bachelor's degree in electrical and computer engineering from the American University of Beirut.
-				I am currently working as a software engineer at startup called Et3arraf.com, the first online matchmaking platform of its kind in the arab world.
+				I am currently working as a software engineer at startup called <a href="https://www.et3arraf.com" target="_blank">Et3arraf.com</a>, the first online matchmaking platform of its kind in the arab world.
 				I've been lucky enough to have had the chance to explore many career fields so far, from working as an electrical engineer at one of the largest oil fields in the world in Kazakhstan, to working at a Fortune 500 logistics company. Whereas both those fields were interesting and challenging, I found my calling when I joined the software industry. 
-				I enjoy solving problems, as well as building creative solutions, and using clean and well structured code. I'm always looking forward to learning new skills and exploring new challenges. 
-				Aside from coding, I spend my time playing and creating music. I'm also an avid football fan, supporter of Arsenal FC!
+				I enjoy solving problems, as well as building creative solutions, and using clean and well-structured code. I'm always looking forward to learning new skills and exploring new challenges. 
+				Aside from coding, I spend my time playing guitar and creating music. I'm also an avid football fan, supporter of Arsenal FC!
 			</div>
 		</div>
 	</div>
