--- a/src/app/projects/projects.tpl.html
+++ b/src/app/projects/projects.tpl.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1">
+		<div class="col-sm-10 col-sm-offset-1" ng-cloak>
 			<div class="selected-project" ng-show="selectedProject > -1">
 				<div class="back" ng-click="resetSelected()"><i class="fa fa-chevron-left"></i> Back To Projects</div>
 				<div >
