--- a/src/app/skills/skills.tpl.html
+++ b/src/app/skills/skills.tpl.html
@@ -3,7 +3,7 @@
 		<div class="section-header">
 			List of My Skills and Tools
 		</div>
-		<div class="col-sm-10 col-sm-offset-1">
+		<div class="col-sm-10 col-sm-offset-1" ng-cloak>
 			<div ng-repeat="(category,categoryContent) in ::list">
 				<h2>{{category}}</h2>
 
